[package]
name = "mpw-leptos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = "0.2.5"
mpw = { git = "https://github.com/dariogoetz/mpw.git" }
web-sys = { version = "0.3", features=["Storage"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
magic-crypt = "3.1.12"
